--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Caesar's Resume
 description: "Caesar Zhang's Resume"
 url:         "https://caesar73.github.io/cv/"
+baseurl: "/cv" # the subpath of your site, e.g. /blog
 date_format: "%b %-d, %Y"
 email: rayanddoctor@126.com
 public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
